--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
         <script>
         
             $( "#clickme" ).click(function(){
-                $( "#book" ).fadeOut( "slow", function(){
+                $( "#book" ).fadeToggle( "slow", function(){
                     //Animation Complete.
                 });
              });
